# spufc

./: .gitignore  TODO  stats.sh  test.sh  tm.cabal
examples/: case.puf  fib.puf  prelude.puf  primes.puf  result.txt  sumevens.puf
examples/lists/: basic1.puf  basic2.puf  basic3.puf  result.txt
examples/tuples/: basic1.puf  basic2.puf  basic3.puf  basic4.puf  basic5.puf  bug1.puf  result.txt
examples/varmo/: basic1.puf  basic2.puf  basic3.puf  basic4.puf  basic5.puf  basic6.puf  basic7.puf  basic8.puf  closure.puf  fact.puf  fibo.puf  flist1.puf  flist2.puf  flist3.puf  gcd.puf  prelude.puf  result.txt  rev.puf
mama/: Makefile  README  main.d  make.cmd  make.sh  test.sh
mama/test/: add.f.cbn  add.f.cbv  add2.f.cbn  add2.f.cbv  app.f.cbn  app.f.cbv  fac.f.cbn  fac.f.cbv  fac2.f.cbn  fac2.f.cbv  fib.f.cbn  fib.f.cbv  rev.f.cbn  rev.f.cbv  rslt.txt  vec.f.cbn  vec.f.cbv
present/tech_demo/: demo.puf  tm_demo.tex
src/: AST.hs  CgMonad.hs  CodeGen.hs  DepAnal.hs  Env.hs  Eval.hs  Fvs.hs  Ident.hs  Inline.hs  LastCall.hs  MaMa.hs  Main.hs  OptMaMa.hs  Parser.hs  Pretty.hs  PufParser.y  PufTokens.x  Rename.hs  StrAnal.hs  Type.hs  Unique.hs  testCodeGen.hs
